deployments/google-cloud/kubernetes/opa-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexa-demo-opa-server-agent
spec:
  selector:
    matchLabels:
      app: hexa-demo-opa-server-agent
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: hexa-demo-opa-server-agent
        tier: frontend
    spec:
      containers:
        - name: hexa-demo-opa-server-agent
          image: gcr.io/${GCP_PROJECT_ID}/opa-server:latest
          args:
          - "run"
          - "--server"
          - "--addr"
          - "0.0.0.0:8881"
          - "--config-file"
          - "/config.yaml"
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 8881
