deployments/google-cloud/kubernetes/opa-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hexa-demo-opa-server-agent
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "config-default-opa-server"}'
  labels:
    app: hexa-demo-opa-server-agent
    tier: frontend
spec:
  type: NodePort
  ports:
    - port: 8887
      targetPort: 8887
  selector:
    app: hexa-demo-opa-server-agent
    tier: frontend
